Fix swagger.json errors.
